# cf_tracking

./: CMakeLists.txt  LICENSE  README.md  cmake
src/cf_libs/common/: cf_tracker.hpp  cv_ext.hpp  feature_channels.hpp  mat_consts.hpp  math_helper.cpp  math_helper.hpp  scale_estimator.cpp  scale_estimator.hpp
src/cf_libs/dsst/: dsst_debug.hpp  dsst_tracker.cpp  dsst_tracker.hpp
src/cf_libs/kcf/: kcf_debug.hpp  kcf_tracker.cpp  kcf_tracker.hpp
src/main/: image_acquisition.cpp  image_acquisition.hpp  main_dsst.cpp  main_kcf.cpp
